--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-	"name": "mithril_noderendering",
-	"version": "0.0.1",
-	"private": true,
-
-	"dependencies": {
-		"mithril": "^0.1.24",
-		"mithril-node-render": "^0.1.5",
-		"class-list": "~0.1.1"
-	}
+  "name": "mithril_noderendering",
+  "version": "0.0.1",
+  "private": true,
+  "dependencies": {
+    "html-element": "^1.3.0",
+    "mithril": "^0.1.24",
+    "mithril-node-render": "^0.1.5"
+  }
 }
