--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "html-element": "^1.5.0",
-    "mithril": "^0.2.4",
-    "mithril-node-render": "^0.4.2"
+    "mithril": "^0.2.5"
   }
 }
