--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "html-element": "^1.5.0",
-    "mithril": "^0.2.5"
+    "express": "^4.14.1",
+    "mithril": "^1.0.0"
   }
 }
