VSCode config update.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
         ["client.hxml"],
         ["server.hxml"],
         ["tests.hxml"]
-    ]
+    ],
+    "vsicons.presets.angular": false
 }
