--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,16 @@ install:
   - haxelib run travix install
 
 script:
-  - haxelib run travix neko
-  - haxelib run travix python
-  - haxelib run travix node
+  - haxelib run travix interp
+  - haxelib run travix js
   - haxelib run travix flash
-  - haxelib run travix java
-  - haxelib run travix cpp -lib hxcpp
-  - haxelib run travix cs
+  - if [[ "$(haxe -version)" =~ ^4.* ]]; then haxelib run travix hl; fi
   - haxelib run travix php
+  - haxelib run travix php7
+  - haxelib run travix node
+  - haxelib run travix neko
+  - if [ "$TRAVIS_OS_NAME" != "osx" ]; then haxelib run travix python; fi
+  - haxelib run travix lua
+  - haxelib run travix java
+  - haxelib run travix cs
+  - haxelib run travix cpp -lib hxcpp
